[gd_scene load_steps=13 format=3 uid="uid://dj1hjt21ra1gr"]

[ext_resource type="Texture2D" uid="uid://bpw743sunbta7" path="res://Archivos/Mundo/Carontes/Zona/Elementos/Antorcha_Sprite_Sheet.png" id="1_kq0ay"]
[ext_resource type="Script" path="res://Archivos/Mundo/Carontes/Zona/Elementos/Antorcha.gd" id="2_mp8tf"]
[ext_resource type="PackedScene" uid="uid://dieu2w7b2qxlb" path="res://Archivos/Generales/Cajas_Colision/Caja_Lesion.tscn" id="3_u2ahy"]
[ext_resource type="PackedScene" uid="uid://bjf855h26o70t" path="res://Archivos/Generales/Cajas_Colision/Zona_Detectar.tscn" id="4_bvoei"]

[sub_resource type="Gradient" id="Gradient_u4qwk"]
interpolation_mode = 2
colors = PackedColorArray(1, 0.265637, 0.277842, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5hhul"]
gradient = SubResource("Gradient_u4qwk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ltyiv"]
lifetime_randomness = 0.8
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
particle_flag_disable_z = true
gravity = Vector3(0, -10, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color = Color(1, 1, 0, 1)
color_ramp = SubResource("GradientTexture1D_5hhul")

[sub_resource type="Animation" id="Animation_iwi8x"]
resource_name = "Anrocha_Apagada"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ls7g1"]
resource_name = "Antorcha"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [250]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hkk37"]
resource_name = "Romperse"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, -4), Vector2(10, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [125, 65, 30]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Liberar"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_885ub"]
_data = {
"Anrocha_Apagada": SubResource("Animation_iwi8x"),
"Antorcha": SubResource("Animation_ls7g1"),
"Romperse": SubResource("Animation_hkk37")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mpfuo"]
size = Vector2(0.84145, 3.19371)

[node name="Antorcha" type="Sprite2D"]
z_index = 1
y_sort_enabled = true
texture = ExtResource("1_kq0ay")
hframes = 3
script = ExtResource("2_mp8tf")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
light_mask = 2
visibility_layer = 2
z_index = -1
position = Vector2(0, -10)
scale = Vector2(3, 3)
amount = 250
process_material = SubResource("ParticleProcessMaterial_ltyiv")
lifetime = 1.5

[node name="Antorcha_Ani_Play" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_885ub")
}

[node name="Caja_Lesion" parent="." instance=ExtResource("3_u2ahy")]
position = Vector2(0, -10)
scale = Vector2(3, 3)
collision_mask = 8

[node name="CollisionShape2D" parent="Caja_Lesion" index="0"]
position = Vector2(0.00243799, 4.6421)
shape = SubResource("RectangleShape2D_mpfuo")
debug_color = Color(0.996078, 0, 0.207843, 0.419608)

[node name="Zona_Detectar" parent="." instance=ExtResource("4_bvoei")]
collision_mask = 2

[connection signal="area_entered" from="Caja_Lesion" to="." method="_on_caja_lesion_area_entered"]

[editable path="Caja_Lesion"]
[editable path="Zona_Detectar"]
